# TUITree

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/tuitree/cli/: gui.py
